<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginView">

    <EditText
        android:id="@+id/login_user_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/login_pass_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_pass_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="E-mail"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_user_field"
        app:layout_constraintEnd_toStartOf="@+id/login_user_field" />

    <TextView
        android:id="@+id/login_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Password"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_pass_field"
        app:layout_constraintEnd_toStartOf="@+id/login_pass_field" />

    <Button
        android:id="@+id/login_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginBottom="32dp"
        android:text="Login"
        android:textColor="@color/white"
        android:background="@drawable/accent_button"
        app:layout_constraintBottom_toTopOf="@+id/login_forgot_label"
        app:layout_constraintEnd_toStartOf="@+id/login_signup_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_signup_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="Signup"
        android:textColor="@color/white"
        android:background="@drawable/accent_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_submit_button" />

    <TextView
        android:id="@+id/login_forgot_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Forgot username or password? Tough luck."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginBottom="32dp"
        android:background="@mipmap/moody_blues_icon"
        app:layout_constraintBottom_toTopOf="@+id/login_user_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/moody_blues_icon" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="Moody Blues"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
